# python-template

./: .commitlintrc.mjs  .gitignore  .mypy.ini  .pre-commit-config.yaml  .prettierignore  .prettierrc.mjs  .renovaterc.json  .ruff.toml  LICENSE  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
